# hophacks25

./: .dockerignore  .gitignore  GEMINI_SETUP.md  LOCAL_SETUP_GUIDE.md  README.md  SIZE_OPTIMIZATION.md  STARTUP_GUIDE.md  build-production.sh  cleanup-and-start.sh  cleanup.sh  coxfinal.py  localhost-key.pem  localhost.pem  package-lock.json  package.json  start-dev-advanced.sh  start-dev.sh  stop-services.sh  test_gemini.py  test_image_generation.py
docs/: requirements.md  tasks.md
fha-recovery-app/: .env.example  .npmrc  next.config.ts  package-lock.json  package.json
fha-recovery-app/src/app/: globals.css  layout.tsx  page.tsx
fha-recovery-app/src/components/: MirrorBoard.tsx
fha-recovery-backend/: .env.example  fha_recovery.db  generate_sample_data.py  migrate_add_total_calories.py  migrate_health_profile_schema.py  migrate_to_calorie_deficit.py  migrate_to_simplified_schema.py  pyproject.toml
fha-recovery-backend/app/: __init__.py  main.py
fha-recovery-backend/app/core/: coxfinal.py  database.py  gemini_client.py  lstm_predictor.py  nutrition_optimizer.py
fha-recovery-backend/app/core/lstm/: lstmfinal.keras  lstmfinal.py  lstmfinalnorm.npz
fha-recovery-backend/app/models/: __init__.py  daily_tracking.py  health_profile.py
fha-recovery-backend/app/routers/: ai.py  bbt.py  daily_tracking.py  health.py  health_profile.py  lstm_prediction.py  meals.py  period_prediction.py
fha-recovery-backend/app/schemas/: ai.py  bbt.py  daily_tracking.py  health_profile.py  lstm_prediction.py  meal_analysis.py  meals.py  period_prediction.py
(+30 files in other folders)
